--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-python
-streamlit
-Pillow
-torch
-torchvision
-opencv-python
-numpy
+python==3.8.8
+streamlit==1.30.0
+Pillow==10.2.0
+torch==2.1.2
+torchvision==0.16.2
+opencv-python==4.9.0.80
