--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,4 @@ streamlit==1.30.0
 Pillow==10.2.0
 torch==2.1.2
 torchvision==0.16.2
-opencv-python==4.9.0.80
-opencv-contrib-python
+opencv-python-headless==4.9.0.80
